fix my work alignment for desktop

--- a/components/Projects/Projects.module.css
+++ b/components/Projects/Projects.module.css
@@ -21,57 +21,10 @@
   }
 }
 
-.projectImage {
-  border-radius: 10px;
-}
-
-.imageContainer {
-  width: 100%;
-  min-width: 250px;
-  filter: grayscale(100%);
-  transition: 0.5s ease;
-  border-radius: 10px;
-}
-
-.imageContainer:hover {
-  filter: grayscale(0%);
-}
-
-@media (max-width: 1000px) {
-  .imageContainer {
-    filter: grayscale(0%);
-  }
-}
-
-.card {
-  width: 32%;
-  margin: 0;
-  min-width: 250px;
-  max-width: 400px;
-}
-
-@media (max-width: 1000px) {
-  .card {
-    width: 100%;
-    max-width: 100%;
-    margin: 2rem 0;
-  }
-}
-
 .subHeader {
   color: black;
   margin: 10px 0;
   font-weight: 400;
-}
-
-.projectTitle {
-  font-size: 28px;
-  margin: 10px 0;
-}
-
-.linkProject {
-  font-weight: 600;
-  color: black;
 }
 
 .text {
@@ -79,4 +32,15 @@
   font-weight: 400;
   height: fit-content;
   line-height: 1.5;
+}
+
+.linkText {
+  text-decoration: underline;
+  cursor: pointer;
+  width: fit-content;
+}
+
+.linkText:hover,
+.linkText:focus {
+  color: lightgray;
 }
